# rules_rust_bug_repro

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
