load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "hello_world",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ),
)

filegroup(
    name = "sysroot",
    srcs = [
        "@llvm_toolchain_llvm//:include",
        "@llvm_toolchain_llvm//:lib",
    ],
)
